--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -7,7 +7,7 @@ gem 'rails', '4.2.10'
 
 # for Heroku deployment - as described in Ap. A of ELLS book
 group :development, :test do
-  gem 'sqlite3'
+  gem 'sqlite3', '~> 1.3.13'
   gem 'byebug'
   gem 'database_cleaner'
   gem 'capybara'
@@ -36,6 +36,8 @@ gem 'uglifier', '>= 2.7.1'
 gem 'jquery-rails'
 gem 'haml'
 gem 'protected_attributes'
+
+gem 'sqlite3', '~> 1.3.13'
 
 # Use unicorn as the web server
 # gem 'unicorn'
